--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ jsonschema-specifications==2024.10.1
 langchain==0.3.15
 langchain-community==0.3.15
 langchain-core==0.3.31
+langchain-openai==0.3.2
 langchain-text-splitters==0.3.5
 langdetect==1.0.9
 langsmith==0.3.1
@@ -76,6 +77,7 @@ pydeck==0.9.1
 Pygments==2.19.1
 pypdf==5.1.0
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
 python-iso639==2024.10.22
 python-magic==0.4.27
